Add reset chart button & extend box

--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 
 </head>
 <body>
-    <div class = "grid-container"></div>
-    <script src="script.js"></script>
+    <div class = "container"></div>
+    
 
 </body>
+<script src="script.js"></script>
 </html>
